--- a/src/assets/css/style-6.css
+++ b/src/assets/css/style-6.css
@@ -1018,6 +1018,18 @@ select {
   left: 0;
   width: 100%;
   height: 100%;
+  z-index: 0;
+  background-color: rgba(27, 26, 26, 0.15);
+}
+.bg-parallax.bg-overlay:before {
+  content: '';
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   z-index: -1;
   background-color: rgba(27, 26, 26, 0.15);
 }
@@ -11122,6 +11134,8 @@ hr {
 }
 .slide__body {
   padding-left: 30px;
+  position: relative;
+  z-index: 2;
 }
 
 .sticky-navbar.is-sticky .navbar-brand img{
